add text and photos

--- a/src/app/examples/landing/landing.component.html
+++ b/src/app/examples/landing/landing.component.html
@@ -23,11 +23,22 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-8 ml-auto mr-auto text-center">
-                    <h2 class="title">LE CONCEPT</h2>
-                    <h5 class="description">La piscine à besoin de vous ! Rien ne va plus dans la structure, il nous faut des experts, des spécialistes</h5>
+                    <h2 class="title">Venez vivre participer à une vraie Escape Game, dans une vrai piscine, chez Swin Val Piscine à valentigney</h2>
+                    <h2>Une première dans le pays de Montbéliard</h2>
+                    <h2> 2000 m2 de jeux rien que pour vous</h2>
+                    <p>Pendant plus d'une heure, la piscine entière vous est réservée. Jusqu'a 5 équipes de 6 joueurs pourront s'affronter dans une eau chauffée à 29°C...</p>
+                    <p>Pour sortie vainqueur de cette épreuve, la natation ne vous suffira pas.... Il faudra aussi utiliser votre tête !</p>
                 </div>
             </div>
             <div class="separator separator-primary"></div>
+
+            <p class="blockquote blockquote-primary">"Le téléphone sonne, c'est le gérant de SwiwVal Piscine, il a besoin de notre équipe"
+                <br>
+                <small>- Louis, Directeur d'une entreprise de maintenance</small>
+                
+
+            </p>
+
             <div class="section-story-overview">
                 <div class="row">
                     <div class="col-md-6">
@@ -36,11 +47,11 @@
                             <p class="blockquote blockquote-primary">"Travailler dans une entreprise de maintenance de piscine finalement, c'est sympa. C'est à chaque fois une nouvelle aventure. Mais cette fois ci, on ne pensait pas vraiment à ce qu'il allait nous arriver.."
                                 <br>
                                 <br>
-                                <small>-Louis</small>
+                                <small>-Germain, employé</small>
                             </p>
                         </div>
                         <!-- Second image on the left side of the article -->
-                        <div class="image-container" style="background-image: url('assets/img/bg3.jpg')"></div>
+                        <div class="image-container" style="background-image: url('assets/img/entrée.jpg')"></div>
                     </div>
                     <div class="col-md-5">
                         <!-- First image on the right side, above the article -->
@@ -66,81 +77,73 @@
     </div>
     <div class="section section-team text-center">
         <div class="container">
-            <h2 class="title">Here is our team</h2>
-            <div class="team">
-                <div class="row">
-                    <div class="col-md-4">
-                        <div class="team-player">
-                            <img src="assets/img/avatar.jpg" alt="Thumbnail Image" class="rounded-circle img-fluid img-raised">
-                            <h4 class="title">Romina Hadid</h4>
-                            <p class="category text-primary">Model</p>
-                            <p class="description">You can write here details about one of your team members. You can give more details about what they do. Feel free to add some
-                                <a href="#">links</a> for people to be able to follow them outside the site.</p>
-                                <a href="#pablo" class="btn btn-primary btn-icon btn-round"><i class="fab fa-twitter"></i></a>
-                                <a href="#pablo" class="btn btn-primary btn-icon btn-round"><i class="fab fa-instagram"></i></a>
-                                <a href="#pablo" class="btn btn-primary btn-icon btn-round"><i class="fab fa-facebook-square"></i></a>
-                        </div>
-                    </div>
-                    <div class="col-md-4">
-                        <div class="team-player">
-                            <img src="assets/img/ryan.jpg" alt="Thumbnail Image" class="rounded-circle img-fluid img-raised">
-                            <h4 class="title">Ryan Tompson</h4>
-                            <p class="category text-primary">Designer</p>
-                            <p class="description">You can write here details about one of your team members. You can give more details about what they do. Feel free to add some
-                                <a href="#">links</a> for people to be able to follow them outside the site.</p>
-                                <a href="#pablo" class="btn btn-primary btn-icon btn-round"><i class="fab fa-twitter"></i></a>
-                                <a href="#pablo" class="btn btn-primary btn-icon btn-round"><i class="fab fa-linkedin"></i></a>
-                        </div>
-                    </div>
-                    <div class="col-md-4">
-                        <div class="team-player">
-                            <img src="assets/img/eva.jpg" alt="Thumbnail Image" class="rounded-circle img-fluid img-raised">
-                            <h4 class="title">Eva Jenner</h4>
-                            <p class="category text-primary">Fashion</p>
-                            <p class="description">You can write here details about one of your team members. You can give more details about what they do. Feel free to add some
-                                <a href="#">links</a> for people to be able to follow them outside the site.</p>
-                                <a href="#pablo" class="btn btn-primary btn-icon btn-round"><i class="fab fa-google-plus"></i></a>
-                                <a href="#pablo" class="btn btn-primary btn-icon btn-round"><i class="fab fa-youtube"></i></a>
-                                <a href="#pablo" class="btn btn-primary btn-icon btn-round"><i class="fab fa-twitter"></i></a>
-                        </div>
-                    </div>
-                </div>
-            </div>
+            <h2 class="title">Tarifs</h2>
+            
+            
         </div>
-    </div>
-    <div class="section section-contact-us text-center">
+    </div>   
+    <div class="section section-team text-center">
         <div class="container">
-            <h2 class="title">Want to work with us?</h2>
-            <p class="description">Your project is very important to us.</p>
-            <div class="row">
-                <div class="col-lg-6 text-center col-md-8 ml-auto mr-auto">
-                  <div class="input-group input-lg" [ngClass]="{'input-group-focus':focus===true}">
-                    <div class="input-group-prepend" >
-                      <span class="input-group-text">
-                          <i class="now-ui-icons users_circle-08"></i>
-                      </span>
-                    </div>
-                      <input type="text" class="form-control" placeholder="Left Font Awesome Icon" (focus)="focus=true" (blur)="focus=false">
-                  </div>
-                  <div class="input-group input-lg" [ngClass]="{'input-group-focus':focus1===true}">
-                    <div class="input-group-prepend" >
-                      <span class="input-group-text">
-                            <i class="now-ui-icons ui-1_email-85"></i>
-                      </span>
-                    </div>
-                      <input type="text" class="form-control" placeholder="Left Font Awesome Icon" (focus)="focus1=true" (blur)="focus1=false">
-                  </div>
-                    <div class="textarea-container">
-                        <textarea class="form-control" name="name" rows="4" cols="80" placeholder="Type a message..."></textarea>
-                    </div>
-                    <div class="send-button">
-                        <a href="#pablo" class="btn btn-primary btn-round btn-block btn-lg">Send Message</a>
-                    </div>
+            <h2 class="title">Reservations</h2>
+            
+            
+        </div>
+    </div>   
+    <div class="section section-download" id="#download-section" data-background-color="black">
+        <div class="container">
+            <div class="row justify-content-md-center">
+                <div class="text-center col-md-12 col-lg-8">
+                    <h3 class="title">Do you love this Bootstrap 4 UI Kit?</h3>
+                    <h5 class="description">Cause if you do, it can be yours for FREE. Hit the button below to navigate to Creative Tim or Invision where you can find the kit in HTML or Sketch/PSD format. Start a new project or give an old Bootstrap project a new look!</h5>
                 </div>
+                <div class="text-center col-md-12 col-lg-8">
+                    <a href="https://www.creative-tim.com/product/now-ui-kit-angular" class="btn btn-primary btn-lg btn-round" role="button">
+                        Download Angular
+                    </a>
+                    <a href="https://www.invisionapp.com/now" target="_blank" class="btn btn-primary btn-lg btn-simple btn-round" role="button">
+                        Download PSD/Sketch
+                    </a>
+                </div>
+            </div>
+            <br>
+            <br>
+            <br>
+            <div class="row text-center mt-5">
+                <div class="col-md-8 ml-auto mr-auto">
+                    <h2>Want more?</h2>
+                    <h5 class="description">We've just launched
+                        <a href="https://timcreative.github.io/now-ui-kit-pro-angular/presentation" target="_blank">Now UI Kit PRO Angular</a>. It has a huge number of components, sections and example pages. Start Your Development With A Badass Bootstrap 4 UI Kit.</h5>
+                </div>
+                <div class="col-md-12">
+                    <a href="https://timcreative.github.io/now-ui-kit-pro-angular/presentation" class="btn btn-neutral btn-round btn-lg" target="_blank">
+                        <i class="now-ui-icons arrows-1_share-66"></i> Upgrade to PRO
+                    </a>
+                </div>
+            </div>
+            <br>
+            <br>
+            <div class="row justify-content-md-center sharing-area text-center">
+              <div class="text-center col-md-12 col-lg-8">
+                <h3>Thank you for supporting us!</h3>
+              </div>
+              <div class="text-center col-md-12 col-lg-8">
+                <a target="_blank" href="https://www.twitter.com/creativetim" class="btn btn-neutral btn-icon btn-twitter btn-round btn-lg" rel="tooltip" title="Follow us">
+                  <i class="fab fa-twitter"></i>
+                </a>
+                <a target="_blank" href="https://www.facebook.com/creativetim" class="btn btn-neutral btn-icon btn-facebook btn-round btn-lg" rel="tooltip" title="Like us">
+                  <i class="fab fa-facebook-square"></i>
+                </a>
+                <a target="_blank" href="https://www.linkedin.com/company-beta/9430489/" class="btn btn-neutral btn-icon btn-linkedin btn-lg btn-round" rel="tooltip" title="Follow us">
+                  <i class="fab fa-linkedin"></i>
+                </a>
+                <a target="_blank" href="https://github.com/creativetimofficial/now-ui-kit-angular" class="btn btn-neutral btn-icon btn-github btn-round btn-lg" rel="tooltip" title="Star on Github">
+                  <i class="fab fa-github"></i>
+                </a>
+              </div>
             </div>
         </div>
     </div>
-    <footer class="footer footer-default">
+    <footer class="footer" data-background-color="black">
         <div class="container">
             <nav>
                 <ul>
@@ -168,10 +171,10 @@
             </nav>
             <div class="copyright">
                 &copy;
-                {{data | date: 'yyyy'}}, Designed by
+              {{data | date: 'yyyy'}}, Designed by
                 <a href="https://www.invisionapp.com" target="_blank">Invision</a>. Coded by
                 <a href="https://www.creative-tim.com" target="_blank">Creative Tim</a>.
             </div>
         </div>
-    </footer>
+    </footer>    
 </div>
