--- a/src/app/examples/landing/landing.component.html
+++ b/src/app/examples/landing/landing.component.html
@@ -1,4 +1,5 @@
-<div class="wrapper">
+
+<div class="wrapper">y
     <div class="page-header clear-filter" filter-color="blue">
         <div class="page-header-image rellax-header" data-rellax-speed="-8" style="background-image: url('assets/img/affiche.jpg');">
         </div>
@@ -23,7 +24,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-8 ml-auto mr-auto text-center">
-                    <h2 class="title">Venez vivre participer à une vraie Escape Game, dans une vrai piscine, chez Swin Val Piscine à valentigney</h2>
+                    <h2 class="title">Venez participer à une vraie Escape Game, dans une vrai piscine, chez Swin Val Piscine à valentigney</h2>
                     <h2>Une première dans le pays de Montbéliard</h2>
                     <h2> 2000 m2 de jeux rien que pour vous</h2>
                     <p>Pendant plus d'une heure, la piscine entière vous est réservée. Jusqu'a 5 équipes de 6 joueurs pourront s'affronter dans une eau chauffée à 29°C...</p>
@@ -79,7 +80,7 @@
         <div class="container">
             <h2 class="title">Tarifs</h2>
             
-            
+            <app-tarifs></app-tarifs>
         </div>
     </div>   
     <div class="section section-team text-center">
@@ -93,8 +94,10 @@
         <div class="container">
             <div class="row justify-content-md-center">
                 <div class="text-center col-md-12 col-lg-8">
-                    <h3 class="title">Do you love this Bootstrap 4 UI Kit?</h3>
-                    <h5 class="description">Cause if you do, it can be yours for FREE. Hit the button below to navigate to Creative Tim or Invision where you can find the kit in HTML or Sketch/PSD format. Start a new project or give an old Bootstrap project a new look!</h5>
+                    <h3 class="title">Un truc à ajouter ?</h3>
+                    <h5 class="description">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iusto molestias fugit iste! Officiis dolorem delectus error et, alias tempore cum, enim vitae nihil voluptate dignissimos quod voluptas fugiat earum at.
+                    Doloribus perferendis expedita quod, deserunt fugit minima voluptatem sit vel eligendi, totam debitis voluptate. Tempore, dolor? Distinctio expedita odit rem aliquid, architecto deserunt perspiciatis illo incidunt pariatur, ullam, nobis deleniti!
+                    Et cum, quos repellat ut dolore iste omnis vitae labore. Perspiciatis praesentium aspernatur possimus recusandae vero deleniti adipisci. Mollitia unde molestiae commodi repellat magnam facilis suscipit repellendus incidunt velit dolorum!</h5>
                 </div>
                 <div class="text-center col-md-12 col-lg-8">
                     <a href="https://www.creative-tim.com/product/now-ui-kit-angular" class="btn btn-primary btn-lg btn-round" role="button">
