--- a/src/app/examples/landing/landing.component.html
+++ b/src/app/examples/landing/landing.component.html
@@ -79,10 +79,11 @@
     <div class="section section-team text-center">
         <div class="container">
             <h2 class="title">Tarifs</h2>
-            
-            <app-tarifs></app-tarifs>
+            <app-tarifs></app-tarifs>            
         </div>
     </div>   
+    
+            <app-conseils></app-conseils>
     <div class="section section-team text-center">
         <div class="container">
             <h2 class="title">Reservations</h2>
