add concept part

--- a/src/app/examples/landing/landing.component.html
+++ b/src/app/examples/landing/landing.component.html
@@ -76,6 +76,18 @@
             </div>
         </div>
     </div>
+
+    <div class="section section-download" id="#concept" data-background-color="black">
+        <div class="container">
+            <div class="row justify-content-md-center">
+                <div class="text-center col-md-12 col-lg-8">
+                    <h3 class="title">Concept</h3>
+                    <app-concept></app-concept>
+                </div>
+            </div>
+        </div>
+    </div>   
+    
     <div class="section section-team text-center">
         <div class="container">
             <h2 class="title">Tarifs</h2>
