--- a/src/app/components/conseils/conseils.component.html
+++ b/src/app/components/conseils/conseils.component.html
@@ -18,7 +18,7 @@
           <div class="col-md-3">
              <i class="fa fa-4x fa-times"></i>            
             <div class="conseils_commentaires">
-                Les short sont interdits
+                Les shorts sont interdits
             </div> 
           </div>
           <div class="col-md-3">  
